--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This file was created by IntelliJ IDEA 12.1.6 for binding GitHub repository
+Bar Crawl generator for Chicago. Play Framework Activator project to illustrate usage of Spring and GIS data
