--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-Bar Crawl generator for Chicago. Play Framework Activator project to illustrate usage of Spring and GIS data
+Bar Crawl generator for Chicago. Play Framework Activator project to illustrate use of Spring and GIS data within Play web app.
+
+![](https://raw.github.com/github/kozyr/bar-crawl/master/public/images/bar-crawl.png)
